fixed hero alignment for mobile

--- a/view/component_hero.scss
+++ b/view/component_hero.scss
@@ -17,18 +17,18 @@
    // xSmall devices (landscape phones, 320px and up)
      @media (min-width: 320px) { 
         // height: 450px;
-        height: 65vh;
+        height: 38vh;
      }
    
      // Small devices (landscape phones, 576px and up)
      @media (min-width: 576px) { 
-        height: 450px;
+        height: 38vh;
      }
    
      // Medium devices (tablets, 768px and up)
      @media (min-width: 768px) {
         // height: 750px;
-        height: 100vh;
+        height: 50vh;
      }
    
      // Large devices (tablets (iPad Pro, 1112px and up)
@@ -41,6 +41,7 @@
      @media (min-width: 1200px) {
          // height: 750px;
          height: 100vh;
+         background-position: left bottom !important;
      }
   
 }
